--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ fpdf
 pillow
 pytesseract
 python-dotenv
-mysql-connector-python
 pdf2image
 PyMuPDF
 google-generativeai
@@ -12,4 +11,4 @@ langdetect
 googletrans==4.0.0-rc1
 numpy
 opencv-python
-
+psycopg2-binary
