--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,9 @@
 flask
-flask_cors
-fpdf
-pillow
-pytesseract
+flask-cors
 python-dotenv
-pdf2image
-PyMuPDF
+requests
+fpdf
 google-generativeai
+psycopg2-binary
 langdetect
 googletrans==4.0.0-rc1
-numpy
-opencv-python
-psycopg2-binary
